--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,6 +3,8 @@ appDescription=App Description
 dark=Dark
 light=Light
 forkMe=Fork me on GitHub
+btpServices=SAP BTP Services
+search=Search for the name or description
 Error=Error
 Information=Information
 Success=Success
