--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,3 +9,5 @@ Success=Success
 Warning=Warning
 performanceNote=Please be aware that this application deliberately ignores best practices and therefore has a mediocre loading performance. Visit the GitHub page to learn more about this
 performanceNoteLink=Devtoberfest 2021 Coding Challenge.
+subheader=SAP BTP Services
+barSearchTitle=Search for the name or description
