--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -9,5 +9,5 @@ Success=Success
 Warning=Warning
 performanceNote=Please be aware that this application deliberately ignores best practices and therefore has a mediocre loading performance. Visit the GitHub page to learn more about this
 performanceNoteLink=Devtoberfest 2021 Coding Challenge.
-SAP_BTP_Services=SAP BTP Services
-Search=Search for the name or description
+btpservices=SAP BTP Services
+search=Search for the name or description
